fixed spacing and height

--- a/css/main.css
+++ b/css/main.css
@@ -42,31 +42,45 @@ body {
     padding-top: 3em;
 }
 
-.menchie {
-    width: 55%;
-    margin: auto;
+#thewink {
     position: relative;
+    height: 30vw;
+    max-width: 20em;
+    margin-bottom: 28em;
+}
+
+#thewink img{
+    position:absolute;
+    left:0;
+  -webkit-transition: opacity .5s ease-in-out;
+  -moz-transition: opacity .5s ease-in-out;
+  -o-transition: opacity .5s ease-in-out;
+  transition: opacity .5s ease-in-out;
+}
+
+#thewink img.top:hover {
+    opacity: 0;
 }
 
 .logo {
-  width: 50%;
+  width: 60%;
   position: relative;
+    max-width: 38em;
 }
 
 .header {
-    padding-top: 36em;
+    padding-top: 3em;
 }
 
 .title {
     margin: 0;
-    padding-top: 1em;
     position: relative;
-    font-size: 9em;
+    font-size: 7em;
 }
 
 .title:hover {
     color: #F28886;
-    font-size: 10em;
+    font-size: 7em;
 }
 
 .subheader {
